--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,21 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Exo+2');
-
-* {
-  font-family: 'Exo 2', sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
-}
-
-footer {
-  position: relative;
-  z-index: 1;
-  color: #2c3539;
-  background-color: #f5f5f5;
-  margin-bottom: 0;
-
-  p {
-    padding: 15px;
-    text-align: center;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
